--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,13 @@
         "psr-4": {
             "Higurashi\\": "src"
         }
+    },
+    "scripts": {
+        "tatarigoroshi": [
+            "php console.php higurashi:download tatarigoroshi",
+            "php console.php higurashi:unpack",
+            "php console.php higurashi:unpack tatarigoroshi",
+            "php console.php higurashi:compile:tatarigoroshi"
+        ]
     }
 }
