Add same pictures detector

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
         "symfony/console": "^3.2",
         "symfony/filesystem": "^3.2",
         "nette/utils": "^2.4",
-        "nette/finder": "^2.4"
+        "nette/finder": "^2.4",
+        "jenssegers/imagehash": "^0.4"
     },
     "autoload": {
         "psr-4": {
