--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
         "symfony/filesystem": "^3.2",
         "nette/utils": "^2.4",
         "nette/finder": "^2.4",
-        "jenssegers/imagehash": "^0.4"
+        "jenssegers/imagehash": "^0.4",
+        "symfony/yaml": "^3.2",
+        "dibi/dibi": "^3.0"
     },
     "autoload": {
         "psr-4": {
