Add recompile command

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "nette/finder": "^2.4",
         "jenssegers/imagehash": "^0.4",
         "symfony/yaml": "^3.2",
-        "dibi/dibi": "^3.0"
+        "dibi/dibi": "^3.0",
+        "symfony/process": "^3.2"
     },
     "autoload": {
         "psr-4": {
